--- a/style.css
+++ b/style.css
@@ -33,12 +33,11 @@ body {
 }
 
 .container {
-  top: 300%;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
-  width: 600px; 
+
   position: absolute;
   z-index: 11;
 }
@@ -194,4 +193,26 @@ li {
   padding: 30px;
   border: none;
   margin: 20px 0px;
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    top: 300%;
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    top: 200%;
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    top: 100%;
+    width: 300px;
+  }
 }
