--- a/style.css
+++ b/style.css
@@ -37,14 +37,15 @@ body {
   margin-right: auto;
   left: 0;
   right: 0;
-
+  top: 300%;
+  width: 700px;
   position: absolute;
   z-index: 11;
 }
 
 .background {
   z-index: 1;
-  top: 400%;
+  top: 500%;
   background-color: #050d05;
   margin-top: 100;
   transform-style: preserve-3d;
@@ -194,25 +195,31 @@ li {
   border: none;
   margin: 20px 0px;
 }
-
-@media (max-width: 960px) {
+@media (max-width: 1200px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
     top: 300%;
     width: 700px;
   }
 }
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    top: 150%;
+    width: 600px;
+  }
+}
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
-    top: 200%;
+    top: 100%;
     width: 500px;
   }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    top: 100%;
+    top: 80%;
     width: 300px;
   }
 }
