--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Merriweather';
-  color: #40514E;
+  color: #b6b69c;
   background-color: #050d05;
 }
 
@@ -122,10 +122,10 @@ body {
  .avatar {
   mix-blend-mode:normal;
   border-radius: 50%;
-  filter: drop-shadow(-2px -2px -2px #ffffff);
-  filter: drop-shadow(2px 2px 2px #bebebe);
-  box-shadow:  10px 10px 20px #bebebe,
-               -10px -10px 20px #ffffff;
+  filter: drop-shadow(-2px -2px -2px #06150a);
+  filter: drop-shadow(2px 2px 2px #020502);
+  box-shadow:  5px 5px 10px #020502,
+               -5px -5px 10px #06150a;
 }
 
 .icon {
@@ -134,25 +134,26 @@ body {
     margin-bottom:  20%;
     mix-blend-mode:normal;
     border-radius: 50%;
-    filter: drop-shadow(-2px -2px -2px #ffffff);
-    filter: drop-shadow(2px 2px 2px #bebebe);
-    box-shadow:  10px 10px 20px #bebebe,
-                 -10px -10px 20px #ffffff;
+    filter: drop-shadow(-2px -2px -2px #06150a);
+    filter: drop-shadow(2px 2px 2px #020502);
+    box-shadow:  5px 5px 10px #020502,
+    -5px -5px 10px #06150a;
 }
 .card {
   width: 20%;
   display: inline-block;
   text-align: center;
-  background: white;
-  box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
-  border-radius: 10px;
+  border-radius: 20px;
+  background: linear-gradient(145deg, #040c05, #040e06);
+  box-shadow:  8px 8px 18px #020502,
+               -8px -8px 18px #06150a;
   padding-top: 20px ;
   border: none;
   margin: 20px 20px;
 }
 
-.card-card {
-
+.card h3 {
+  margin-bottom: 10%;
 }
 
 h1 {
@@ -164,7 +165,7 @@ h1 {
 }
 
 h2 {
-  color: #002300;
+  color: #b6b69c;
   font-family: 'Montserrat', sans-serif;
   font-weight: normal;
   font-size: 1em;
@@ -173,7 +174,7 @@ h2 {
 }
 
 h3 {
-  color: #002300;
+  color: #b6b69c;
   font-family: 'Montserrat', sans-serif;
   font-weight: normal;
   font-size: 0.8em;
@@ -188,13 +189,13 @@ p {
 
 hr {
   border-style: none;
-  border-top: 5px dotted #002300;
+  border-top: 5px dotted #b6b69c;
   width: 100px;
   margin: 10px auto;
 }
 
 a {
-  color: #11999E;
+  color: #b6b69c;
   font-size: 1.5em;
   
   font-family: 'Montserrat' , sans-serif;
@@ -203,7 +204,7 @@ a {
 }
 
 a:hover {
-  color: #3cb0fd;
+  color: #569d4c;
 }
 
 ul {
@@ -216,17 +217,22 @@ li {
 }
 
 .btn {
-  background: #66BFBF;
-  border-radius: 10px;
+  border-radius: 20%;
+  background: linear-gradient(145deg, #040c05, #040e06);
+  box-shadow:  8px 8px 16px #020502,
+               -8px -8px 16px #06150a;
   font-family: Montserrat;
-  color: #ffffff;
+  color: #b6b69c;
   font-size: 20px;
   padding: 10px;
+  margin: auto 20px;
 }
 
 .btn:hover {
-  background: #3cb0fd;
-  color: #ffffff;
+  background: #040d06;
+  box-shadow: inset 12px 12px 24px #020502,
+              inset -12px -12px 24px #06150a;
+  color: #b6b69c;
 
 }
 
@@ -235,9 +241,10 @@ li {
 }
 .home-card {
   text-align: center;
-  background: white;
-  box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
   border-radius: 30px;
+  background: linear-gradient(145deg, #040c05, #040e06);
+  box-shadow:  12px 12px 24px #020502,
+               -12px -12px 24px #06150a;
   padding: 30px;
   border: none;
   margin: 20px 0px;
