--- a/style.css
+++ b/style.css
@@ -305,6 +305,7 @@ li {
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
+
   .container {
     top: 80%;
     width: 300px;
@@ -324,6 +325,7 @@ li {
   }
 
   .hi h1 {
+    margin-top: 5px;
     margin-bottom: 0px;
     padding-bottom: 0px;
   }
